--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@mantine/notifications": "^7.11.0",
     "@tanstack/react-query": "^5.45.1",
     "@tanstack/react-query-devtools": "^5.45.1",
-    "firebase": "^10.12.2",
+    "firebase": "^10.12.3",
+    "firebase-admin": "^12.2.0",
+    "firebase-tools": "^13.13.0",
     "formik": "^2.4.6",
     "nanoid": "^5.0.7",
     "react": "^18.2.0",
